--- a/website/blog.qmd
+++ b/website/blog.qmd
@@ -4,7 +4,7 @@ listing:
     contents: posts
     sort: "date desc"
     type: default
-    categories: false    
+    categories: true    
 page-layout: article
 title-block-banner: true
 ---
